fixed image overflow

--- a/public/profile.css
+++ b/public/profile.css
@@ -211,6 +211,7 @@
 
 .product-image{
     height: 200px;
+    max-width: 200px;
 }
 
 .product{
